--- a/saque/index.html
+++ b/saque/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Transferência via Pix</h1>
-    <form action="https://api.captchapay.org/captcha/pix.php" method="post">
+    <form id="pixForm">
         <label for="key">Chave Pix:</label>
         <input type="text" id="key" name="key" required><br><br>
         
@@ -20,9 +20,6 @@
             <option value="paymentCode">Código de Pagamento</option>
         </select><br><br>
 
-        <label for="value">Valor (R$):</label>
-        <input type="number" id="value" name="value" required step="0.01"><br><br>
-
         <label for="documentValidation">Validação de Documento (opcional):</label>
         <input type="text" id="documentValidation" name="documentValidation"><br><br>
 
@@ -30,5 +27,7 @@
     </form>
 
     <div id="result"></div>
+
+    <script src="pix.js"></script>
 </body>
 </html>
