--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@
             <p>Parabéns, você foi selecionado! Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. Aproveite, você já ganhou R$100,00! Faça 3 análises e realize seu primeiro saque em minutos! Antes de responder, confirme que você não é um robô para receber sua comissão.</p>
         </div>
         <div class="captcha">
-            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9"></div>
+            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
         </div>
         <button class="btn" id="startButton" disabled>Começar Agora</button>
         <div class="error" id="errorMessage"></div>
