--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
             background-color: #f5f5f5;
         }
         .container {
-            max-width: 400px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
             background-color: white;
@@ -42,8 +42,6 @@
         .btn {
             display: block;
             width: 100%;
-            background-color: #4caf50;
-            color: white;
             padding: 15px;
             text-align: center;
             border: none;
@@ -51,6 +49,14 @@
             font-size: 1.2em;
             cursor: pointer;
             margin-top: 20px;
+        }
+        .btn-green {
+            background-color: #4caf50;
+            color: white;
+        }
+        .btn-red {
+            background-color: #f44336;
+            color: white;
         }
         .btn:disabled {
             background-color: #ccc;
@@ -85,32 +91,42 @@
             <p>Ao fazer essa análise, você vai receber: R$25,00 de comissão.</p>
         </div>
         <div class="content">
-            <p>Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
-        </div>
-        <div>
-            <img src="https://captchapay.org/assets/img/captcha1.png" alt="Captcha com veículos">
-        </div>
-        <div class="content">
             <p>Antes de responder, por favor, complete o captcha para seguir para a próxima tarefa.</p>
         </div>
         <div class="captcha">
             <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
         </div>
-        <button class="btn" id="startButton" disabled>Responder e Continuar</button>
+        <div class="content">
+            <p>Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
+        </div>
+        <div>
+            <img src="https://captchapay.org/assets/img/captcha1.png" alt="Captcha com veículos">
+        </div>
+        <button class="btn btn-green" id="yesButton" disabled>Sim</button>
+        <button class="btn btn-red" id="noButton" disabled>Não</button>
         <div class="error" id="errorMessage"></div>
     </div>
     
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
         function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
+            document.getElementById('yesButton').disabled = false;
+            document.getElementById('noButton').disabled = false;
         }
 
-        document.getElementById('startButton').addEventListener('click', function() {
+        document.getElementById('yesButton').addEventListener('click', function() {
             if (grecaptcha.getResponse() === '') {
                 document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
             } else {
-                window.location.href = 'https://seu-site.com/novo-endereco';
+                window.location.href = 'https://seu-site.com/novo-endereco-sim';
+            }
+        });
+
+        document.getElementById('noButton').addEventListener('click', function() {
+            if (grecaptcha.getResponse() === '') {
+                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
+            } else {
+                window.location.href = 'https://seu-site.com/novo-endereco-nao';
             }
         });
     </script>
