--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,13 @@
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .container {
-            max-width: 800px;
-            margin: 0 auto;
+            width: 400px;
             padding: 20px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -42,8 +45,6 @@
         .btn {
             display: block;
             width: 100%;
-            background-color: #4caf50;
-            color: white;
             padding: 15px;
             text-align: center;
             border: none;
@@ -51,6 +52,14 @@
             font-size: 1.2em;
             cursor: pointer;
             margin-top: 20px;
+        }
+        .btn-green {
+            background-color: #4caf50;
+            color: white;
+        }
+        .btn-red {
+            background-color: #f44336;
+            color: white;
         }
         .btn:disabled {
             background-color: #ccc;
@@ -61,25 +70,50 @@
             text-align: center;
             margin-top: 20px;
         }
+        @media (max-width: 600px) {
+            .container {
+                width: 100%;
+                padding: 10px;
+            }
+            .saldo {
+                font-size: 1.2em;
+            }
+            .btn {
+                font-size: 1em;
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="page1">
         <img src="https://captchapay.org/assets/img/img1.png" alt="Google Captchas">
-        <div class="content">
-            <p>O Google Captchas precisa de você para aumentar a segurança dos seus sites analisando os Captchas estão marcados corretamente ou incorretamente.</p>
-        </div>
         <div class="saldo">
             Saldo: R$100,00
         </div>
         <div class="content">
-            <p>Parabéns, você foi selecionado! Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. Aproveite, você já ganhou R$100,00! Faça 3 análises e realize seu primeiro saque em minutos! Antes de responder, confirme que você não é um robô para receber sua comissão.</p>
+            <p>Ao fazer essa análise, você vai receber: R$25,00 de comissão.</p>
+        </div>
+        <div class="content">
+            <p>Antes de responder, por favor, complete o captcha para seguir para a próxima tarefa.</p>
         </div>
         <div class="captcha">
             <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
         </div>
         <button class="btn" id="startButton" disabled>Começar Agora</button>
         <div class="error" id="errorMessage"></div>
+    </div>
+
+    <div class="container" id="page2" style="display: none;">
+        <div class="content">
+            <p>Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
+        </div>
+        <div>
+            <img src="https://captchapay.org/assets/img/captcha1.png" alt="Captcha com veículos">
+        </div>
+        <button class="btn btn-green" id="yesButton" disabled>Sim</button>
+        <button class="btn btn-red" id="noButton" disabled>Não</button>
+        <div class="error" id="errorMessagePage2"></div>
     </div>
     
     <script src="https://www.google.com/recaptcha/api.js"></script>
@@ -92,7 +126,26 @@
             if (grecaptcha.getResponse() === '') {
                 document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
             } else {
-                window.location.href = 'https://seu-site.com/novo-endereco';
+                document.getElementById('page1').style.display = 'none';
+                document.getElementById('page2').style.display = 'block';
+                document.getElementById('yesButton').disabled = false;
+                document.getElementById('noButton').disabled = false;
+            }
+        });
+
+        document.getElementById('yesButton').addEventListener('click', function() {
+            if (grecaptcha.getResponse() === '') {
+                document.getElementById('errorMessagePage2').innerText = 'Por favor, conclua o captcha antes de continuar.';
+            } else {
+                window.location.href = 'https://seu-site.com/novo-endereco-sim';
+            }
+        });
+
+        document.getElementById('noButton').addEventListener('click', function() {
+            if (grecaptcha.getResponse() === '') {
+                document.getElementById('errorMessagePage2').innerText = 'Por favor, conclua o captcha antes de continuar.';
+            } else {
+                window.location.href = 'https://seu-site.com/novo-endereco-nao';
             }
         });
     </script>
