--- a/index.html
+++ b/index.html
@@ -4,91 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Captchas - Nova Ferramenta</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            width: 400px;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        picture img {
-            width: 100%;
-            height: auto;
-        }
-        .saldo {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
-            border-radius: 5px;
-            font-size: 1.5em;
-        }
-        .content {
-            margin: 20px 0;
-        }
-        .captcha {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .btn {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            text-align: center;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        .btn-green {
-            background-color: #4caf50;
-            color: white;
-        }
-        .btn-red {
-            background-color: #f44336;
-            color: white;
-        }
-        .btn:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-        .error {
-            color: red;
-            text-align: center;
-            margin-top: 20px;
-        }
-        .progresso {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-        @media (max-width: 600px) {
-            .container {
-                width: 100%;
-                padding: 10px;
-            }
-            .saldo {
-                font-size: 1.2em;
-            }
-            .btn {
-                font-size: 1em;
-                padding: 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container" id="page1">
@@ -138,73 +54,6 @@
     </div>
     
     <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script>
-        const tasks = [
-            { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha2.webp', imagePng: 'assets/img/captcha2.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém pessoas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha3.webp', imagePng: 'assets/img/captcha3.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém casas.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha4.webp', imagePng: 'assets/img/captcha4.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém motocicletas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha5.webp', imagePng: 'assets/img/captcha5.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém animais.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha6.webp', imagePng: 'assets/img/captcha6.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém semáforos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha7.webp', imagePng: 'assets/img/captcha7.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém barcos.', answer: 'não' },
-        ];
-        let currentTask = 0;
-        let saldo = 100.00;
-
-        function updateTask() {
-            if (currentTask < tasks.length) {
-                document.getElementById('taskImageWebp').srcset = tasks[currentTask].imageWebp;
-                document.getElementById('taskImagePng').srcset = tasks[currentTask].imagePng;
-                document.getElementById('taskImage').src = tasks[currentTask].imagePng;
-                document.getElementById('taskText').innerText = tasks[currentTask].text;
-                document.getElementById('progresso').innerText = `Tarefa ${currentTask + 1} de ${tasks.length}`;
-            } else {
-                document.getElementById('page2').style.display = 'none';
-                document.getElementById('pageFinal').style.display = 'block';
-            }
-        }
-
-        function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
-        }
-
-        document.getElementById('startButton').addEventListener('click', function() {
-            if (grecaptcha.getResponse() === '') {
-                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
-            } else {
-                saldo += 25.00;
-                document.getElementById('saldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-                new Audio('assets/audio/som-dinheiro.mp3').play();
-                document.getElementById('page1').style.display = 'none';
-                document.getElementById('page2').style.display = 'block';
-                updateTask();
-            }
-        });
-
-        function validateAnswer(answer) {
-            const correct = tasks[currentTask].answer;
-            if (answer === correct) {
-                saldo += saldo * 0.15;
-                new Audio('assets/audio/som-dinheiro.mp3').play();
-            } else {
-                document.getElementById('errorMessagePage2').innerText = 'Resposta errada. Avançando para a próxima tarefa.';
-            }
-            document.getElementById('saldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-            currentTask++;
-            updateTask();
-        }
-
-        document.getElementById('yesButton').addEventListener('click', function() {
-            validateAnswer('sim');
-        });
-
-        document.getElementById('noButton').addEventListener('click', function() {
-            validateAnswer('não');
-        });
-
-        document.getElementById('finalButton').addEventListener('click', function() {
-            window.location.href = 'vsl.html';
-        });
-    </script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
