--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     </div>
 
     <div class="container" id="page2" style="display: none;">
+        <picture>
+            <source srcset="assets/img/img1.webp" type="image/webp">
+            <source srcset="assets/img/img1.png" type="image/png">
+            <img src="assets/img/img1.png" alt="Google Captchas">
+        </picture>
+        <div class="saldo" id="taskSaldo">
+            Saldo: R$100,00
+        </div>
         <div class="progresso" id="progresso">
             Tarefa 1 de 7
         </div>
